# playground

./: .gitignore  README.md  altair-demo.py  ames-housing-eda-with-altair.py  geocoding.py  justfile  kuzu-demo.py  kuzu-load-data.py  plugin.xlsx  pyproject.toml
data/movielens/: explorer.db
