[project]
name = "data-science-playground"
version = "0.2.0"
description = "Data science playground with the new pydata stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fastexcel[polars,pyarrow]>=0.15.1",
    "kuzu>=0.11.3",
    "marimo[lsp]>=0.15.2",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "ruff>=0.13.0",
    "scipy>=1.16.2",
]

[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_mypy = true           # Type checking with mypy (enabled by default, if installed)
enable_ruff = true           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes
